--- a/src/_assets/sass/_global.scss
+++ b/src/_assets/sass/_global.scss
@@ -1,4 +1,5 @@
 :root {
+	/* css vars */
 	--mdc_niore__default: hsla(240, 8%, 44%, 1);
 	--mdc_niore__focus: hsl(200, 73%, 56%);
 	--mdc_niore__disabled: hsla(240, 8%, 44%, 0.5);
