--- a/src/_assets/sass/_global.scss
+++ b/src/_assets/sass/_global.scss
@@ -1,8 +1,3 @@
-:root {
-	// vars da aplicaçnao
-	--minha_var__background_color: blue;
-	//...
-}
-
-// outros css
-// ...
+// app vars
+@import './vars';
+@import './fn';
