--- a/src/_assets/css/app.css
+++ b/src/_assets/css/app.css
@@ -1,12 +1,2 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* @layer base, components, utilities, app; */
-@layer base {
-	body {
-		@apply
-			bg-slate-800
-			;
-	}
-}
+@import "./_base.css";
+/* @import "./others.css"; */
